--- a/src/templates/screens/IssueView.vm
+++ b/src/templates/screens/IssueView.vm
@@ -1,11 +1,11 @@
-#set ( $action = $link.setPage("IssueView.vm").setAction("ModifyIssue").addPathInfo("nextTemplate", "Links.vm") )
+#set ( $action = $link.setPage("IssueView.vm").setAction("ModifyIssue").addPathInfo("nextTemplate", "IssueView.vm") )
 #set ( $currentIssueId = $data.Parameters.getString("id") )
 #set ( $currentIssue = $scarabR.getIssue($currentIssueId) )
 #if ($currentIssue)
-    #set ($attrValues = $currentIssue.AllAttributeValuesMap)
+    #set ($attrValues = $currentIssue.ModuleAttributeValuesMap)
 
 <form name="IssueForm" method="post" action="$action" >
-
+<input type="hidden" name="id" value="$currentIssue.IssueId">
 #set($attVal =  $attrValues.get("DESCRIPTION"))
 #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
  
@@ -36,7 +36,7 @@
           <td class="b">#$currentIssue.UniqueId</td>
          </tr>
 #foreach ( $attKey in $attrValues )
-  #set ( $attVal = $attrValues.get($attKey.toString().toUpperCase()) )
+  #set ( $attVal = $attrValues.get($attKey.toString().toUpperCase()))
   #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
 
 
@@ -48,7 +48,7 @@
         #set ( $field = "Value" )  
   #end
 
-  #if ($attVal.Value && !$attVal.Attribute.Name.equals("Description") )
+  #if ($attVal.Value && !$attVal.Attribute.Name.equals("Assigned To") )
          <tr>
           <td width="120" class="a">
              <strong>$attVal.Attribute.Name:</strong>
@@ -77,6 +77,7 @@
   #end
 #end
 
+#*
          <tr>
           <td width="120" class="a"><strong>assignee(s):</strong></td>
           <td>
@@ -88,9 +89,10 @@
            #end
            </td>
          </tr>
+*#
          <tr>
            <td>
-           <input type="submit" value="edit assignees" class="button" /></td>
+           <input type="submit" value="edit attributes" name="eventSubmit_doSubmitattributes" class="button" /></td>
            <td></td>
          </tr>
         </table>
@@ -118,7 +120,7 @@
           <th><a href="#">description:</a></th>
          </tr>
 
-    #foreach($url in $currentIssue.Url)
+    #foreach($url in $currentIssue.Urls)
          #if( $velocityCount % 2 > 0 )
             <tr class="a">
          #else 
@@ -262,6 +264,16 @@
       </div>
 #end
 
+#set ( $atch = $scarabR.Attachment )
+$atch
+#set( $intakeAttachment = $intake.Attachment.mapTo($atch) )
+$intakeAttachment
+$intakeAttachment.Name.Key
+$intakeAttachment.Name
+
+#set ($atchgroup = $intake.Attachment)
+$atchgroup.Name.Key
+
 ## COMMENTS
       <div class="grouper">
        <div class="datatitle">
@@ -282,9 +294,7 @@
            #end
           </td>
 
-          <td class="b"><textarea rows="2" cols="35" class="text">
-          $comment.DataAsString
-          </textarea></td>
+          <td class="b"><textarea rows="2" cols="35" class="text">$comment.DataAsString</textarea></td>
          </tr>
     #end
 
@@ -295,7 +305,7 @@
            <textarea rows="2" cols="35" class="text">
            </textarea>
 
-           <p><input type="submit" value="submit comment" name="eventSubmit_doAddcomment" class="button" /></p>
+           <p><input type="submit" value="submit comment" name="eventSubmit_doSubmitcomment" class="button" /></p>
           </td>
          </tr>
         </table>
