added a &nbsp; if there is a null value Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/screens/entry/Wizard2.vm
+++ b/src/templates/screens/entry/Wizard2.vm
@@ -129,7 +129,7 @@
 
           <td>$issue.CreatedDate</td>
 
-          <td>$!issue.ClosedDate</td>
+          <td>#if ($issue.ClosedDate)$issue.ClosedDate#else&nbsp;#end</td>
 
          </tr>
 
