--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -8,7 +8,7 @@ $page.setTitle("Enter New Issue")
 
 <h1>Enter Issue</h1>
 <div class="grouper">
-<form name="ReportForm" method="post" action="$action">
+<form name="ReportForm" method="GET" action="$action">
 
 <div class="datatitle">
     <table width="100%" cellpadding="3" cellspacing="2" border="1">
