keep search parameters for reentry into template
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/entry/Wizard2.vm
+++ b/src/templates/screens/entry/Wizard2.vm
@@ -1,8 +1,7 @@
-#set ( $action = $link.setPage("entry,Wizard2.vm").setAction("ReportIssue").addPathInfo("nextTemplate", "entry,Wizard3.vm") )
+#set ( $action = $link.setPage("entry,Wizard2.vm").setAction("ReportIssue").addPathInfo($data.Parameters).addPathInfo("nextTemplate", "entry,Wizard3.vm") )
 #set ($user = $scarabR.User)
 #set ($module = $user.CurrentModule)
 #set ($currentIssue = $user.ReportingIssue)
-
 
 <form method="GET" name="Report2Form" action="$action">
 
