--- a/src/templates/layouts/default.vm
+++ b/src/templates/layouts/default.vm
@@ -3,9 +3,9 @@
 <html>
  <head>
   <title>$page.Title</title>
-  <link rel="stylesheet" type="text/css" href="/scarab/csi/style/main.css" />
-  <link rel="stylesheet" type="text/css" href="/scarab/csi/style/print.css" media="print" />
-  <link rel="alternate stylesheet" title="compact" type="text/css" href="/scarab/csi/style/compact.css" />
+  <link rel="stylesheet" type="text/css" href="/scarab/style/main.css" />
+  <link rel="stylesheet" type="text/css" href="/scarab/style/print.css" media="print" />
+  <link rel="alternate stylesheet" title="compact" type="text/css" href="/scarab/style/compact.css" />
  </head>
  <body>
   <form action="#" method="get">
